--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.57.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
@@ -31,7 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
-    "eslint-config-next": "13.1.1",
+    "eslint-config-next": "^0.2.4",
     "prisma": "^4.8.0",
     "typescript": "^4.9.4"
   },
